--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <hr>
     <h3> follow me on instagram...</h3>
     <a href = "https://www.instagram.com/shutter_studio.off?igsh=MW1oa2tzNjQ1bXlnZg=="target = "_blank">
-        <img src = "ima/e.png" height = "15px">
+        <img src = "ima/R.png" height = "15px">
         Shutter_Studio.off</a>
         <br>
         <a href = "https://www.instagram.com/anto_______008?igsh=emwydmMxMjdjd3R0" target = "_blank">
-            <img src ="ima/e.png" height = "15px">
+            <img src ="ima/R.png" height = "15px">
             anto_____08</a>
     
     
